# IAMRusty

./: .env.openfga.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.build  Makefile  README.md  cargo.toml  config.toml  docker-compose.yml  justfile  openspecs.yaml  sonar-project.properties
Hive/: Cargo.toml  Dockerfile  database  docker-entrypoint.sh  openspecs.yaml
Hive/application/: Cargo.toml
Hive/application/src/: error.rs  lib.rs
Hive/config/: default.toml  development.toml  test.toml
Hive/configuration/: Cargo.toml
Hive/configuration/src/: lib.rs
Hive/domain/: Cargo.toml
Hive/domain/src/: error.rs  lib.rs
Hive/http/: Cargo.toml
Hive/http/src/: error.rs  lib.rs  validation.rs
Hive/infra/: Cargo.toml
Hive/infra/src/: lib.rs  transaction.rs
Hive/migration/: Cargo.toml
Hive/migration/src/: lib.rs  m20240101_000001_create_organizations_table.rs  m20240101_000002_create_organization_roles_table.rs  (+12 more)
Hive/setup/: Cargo.toml
Hive/src/: main.rs
Hive/tests/: common.rs  external_link_api_tests.rs  members_api_tests.rs  organization_api_tests.rs  outbox_tests.rs  sqs_event_routing_tests.rs
IAMRusty/: Cargo.toml  Dockerfile  Dockerfile.solo-build  README.md  cargo.toml  docker-compose.yml  docker-entrypoint.sh  openspecs.yaml
IAMRusty/application/: Cargo.toml
IAMRusty/config/: default.toml  development.toml  example.toml  production.toml  test.toml
IAMRusty/configuration/: Cargo.toml
IAMRusty/docs/: API_REFERENCE.md  ARCHITECTURE.md  CERTIFICATE_SETUP_GUIDE.md  COMMAND_PATTERN.md  COMMAND_RETRY_CONFIGURATION.md  DATABASE_CONFIGURATION.md  FIXTURES_GUIDE.md  HTTPS_SETUP.md  JWT_CONFIGURATION_GUIDE.md  KAFKA_EVENT_TESTING_GUIDE.md  KAFKA_INTEGRATION.md  OAUTH_SECURITY_GUIDE.md  PROVIDER_FACTORY_GUIDE.md  TESTING_GUIDE.md  TEST_DATABASE_GUIDE.md  UNIT_TESTING_GUIDE.md
IAMRusty/domain/: Cargo.toml
IAMRusty/http/: Cargo.toml
IAMRusty/infra/: Cargo.toml
IAMRusty/migration/: Cargo.toml
IAMRusty/scripts/: generate-certs.ps1  generate-certs.sh  generate-jwt-rsa.sh  localstack-init.sh  test-jwt.ps1
IAMRusty/setup/: Cargo.toml
IAMRusty/src/: main.rs
IAMRusty/tests/: auth_complete_registration.rs  auth_email_password.rs  auth_oauth_callback.rs  auth_oauth_start.rs  auth_password_reset.rs  auth_resend_verification.rs  auth_username_flow.rs  auth_username_flow_advanced.rs  auth_username_flow_part2.rs  auth_username_validation.rs  common.rs  internal_provider_token.rs  outbox_tests.rs  relink_provider.rs  revoke_provider_token.rs  signup_kafka.rs  signup_sqs.rs  sqs_event_routing_tests.rs  token.rs  user.rs  username_check_tests.rs
Manifesto/: .gitignore  Cargo.toml  Dockerfile  IMPLEMENTATION_STATUS.md  README.md  SETUP.md  docker-entrypoint.sh  openspecs.yaml
Manifesto/application/: Cargo.toml
Manifesto/config/: default.toml  development.toml  test.toml
Manifesto/configuration/: Cargo.toml
Manifesto/docs/: rustycog-hexagonal-web-service-guide.md  rustycog-implementation-and-usage-guide.md  rustycog-service-build-guide.md
Manifesto/domain/: Cargo.toml
Manifesto/http/: Cargo.toml
Manifesto/infra/: Cargo.toml
Manifesto/migration/: Cargo.toml
Manifesto/setup/: Cargo.toml
Manifesto/src/: main.rs
Manifesto/tests/: common.rs  component_acl_consistency_tests.rs  component_api_tests.rs  component_service_client_tests.rs  event_runtime_tests.rs  member_api_tests.rs  project_api_tests.rs  public_acl_api_tests.rs  sqs_event_routing_tests.rs  transaction_readiness_tests.rs
Telegraph/: Cargo.toml  Dockerfile  Dockerfile.solo-build  docker-compose.yml  docker-entrypoint.sh  openspecs.yaml
Telegraph/.cargo/: config.toml
Telegraph/application/: Cargo.toml
Telegraph/config/: default.toml  development.toml  test.toml
Telegraph/configuration/: Cargo.toml
Telegraph/domain/: Cargo.toml
Telegraph/http/: Cargo.toml
Telegraph/infra/: Cargo.toml
Telegraph/migration/: Cargo.toml
Telegraph/setup/: Cargo.toml
Telegraph/src/: main.rs
Telegraph/tests/: common.rs  notification_business_logic_test.rs  notification_error_scenarios_test.rs  notification_http_endpoints_test.rs  user_email_verified_event_test.rs  user_signup_event_test.rs
apparatus-events/: Cargo.toml
apparatus-events/src/: component.rs  lib.rs
application/: Cargo.toml
application/src/: auth.rs  config.rs  error.rs  lib.rs
configuration/: Cargo.toml
configuration/src/: lib.rs
domain/: Cargo.toml
domain/src/: error.rs  lib.rs
http/: Cargo.toml
http/src/: error.rs  lib.rs  middleware_auth.rs  oauth_state.rs  server.rs  validation.rs
iam-events/: Cargo.toml
iam-events/src/: events.rs  lib.rs
infra/: Cargo.toml
infra/src/: event_adapter.rs  lib.rs
manifesto-events/: Cargo.toml
manifesto-events/src/: component.rs  lib.rs  member.rs  project.rs
monolith/: Cargo.toml
monolith/src/: config.rs  main.rs  routes.rs  runtime.rs
rustycog/: Cargo.toml  README.md
rustycog/rustycog-command/: Cargo.toml
rustycog/rustycog-config/: Cargo.toml
rustycog/rustycog-core/: Cargo.toml
rustycog/rustycog-db/: Cargo.toml
rustycog/rustycog-events/: Cargo.toml
rustycog/rustycog-http/: Cargo.toml
rustycog/rustycog-logger/: Cargo.toml
rustycog/rustycog-outbox/: Cargo.toml
rustycog/rustycog-permission/: Cargo.toml
rustycog/rustycog-server/: Cargo.toml
rustycog/rustycog-testing/: Cargo.toml
sentinel-sync/: Cargo.toml
sentinel-sync/config/: default.toml  development.toml  sentinel-sync.toml.example  test.toml
sentinel-sync/src/: config.rs  fga_client.rs  handler.rs  idempotency.rs  main.rs
service-blueprint/: Cargo.toml  README.md
service-blueprint/application/: Cargo.toml
service-blueprint/configuration/: Cargo.toml
service-blueprint/domain/: Cargo.toml
service-blueprint/http/: Cargo.toml
service-blueprint/infra/: Cargo.toml
service-blueprint/migration/: Cargo.toml
service-blueprint/scripts/: rename-service.sh
service-blueprint/setup/: Cargo.toml
service-blueprint/src/: main.rs
service-blueprint/tests/: api_test.rs  common.rs  integration_test.rs
setup/: Cargo.toml
setup/src/: app.rs  config.rs  lib.rs
(+977 files in other folders)
