[package]
name = "iam-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "IAM microservice with OAuth2, OpenID Connect, JWT, PostgreSQL, Axum, and SeaORM"
license.workspace = true

[features]
# Feature flags for testing and QA environments
test-mode = []
qa-mode = []

[dependencies]
# Internal workspace crates
iam-domain = { path = "domain" }
iam-application = { path = "application" }
iam-infra = { path = "infra" }
iam-http_server = { path = "http" }
iam-setup = { path = "setup" }
iam-configuration = { path = "configuration" }

# Shared crates
iam-events = { path = "../iam-events" }

# Web & HTTP
axum = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }

# ORM & PostgreSQL
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true, optional = true }

# Auth
oauth2 = { workspace = true }
openidconnect = { workspace = true }
jsonwebtoken = { workspace = true }

# Utility
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
config = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Middleware / tower layers
tower = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
axum-test = { workspace = true }
tokio-test = { workspace = true }
wiremock = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
sqlx = { workspace = true }
sea-orm-cli = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
tracing-subscriber = { workspace = true }
iam-migration = { path = "migration" }
serial_test = { workspace = true }
ctrlc = { workspace = true }
libc = { workspace = true }
ctor = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
rdkafka = { workspace = true }
aws-sdk-sqs = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
iam-infra = { path = "infra", features = ["test-utils", "test-relaxed-jwt"] }
rustycog-events = { path = "../rustycog/rustycog-events", features = ["test-utils"] }
rustycog-core = { path = "../rustycog/rustycog-core" }
rustycog-outbox = { path = "../rustycog/rustycog-outbox" }
rustycog-testing = { path = "../rustycog/rustycog-testing" }
