[package]
name = "telegraph-service"
version = "0.1.0"
edition = "2021"
authors = ["Djoé Denne <djoe.denne@gmail.com>"]
description = "Telegraph communication microservice with SQS, email, notifications, and configurable event processing"
license = "MIT OR Apache-2.0"

[workspace]
members = ["domain", "application", "infra", "http", "configuration", "setup"]

[features]
# Feature flags for testing and QA environments
test-mode = []
qa-mode = []

[dependencies]
# Internal workspace crates
domain = { path = "domain" }
application = { path = "application" }
infra = { path = "infra" }
http = { path = "http" }
configuration = { path = "configuration" }
setup = { path = "setup" }

# Shared crates
iam-events = { path = "../iam-events" }

# Configuration
rustycog-config = { path = "../rustycog/rustycog-config" }

# Web & HTTP
axum = { version = "0.8.4", features = ["macros", "json"] }
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }
hyper = "1.3"

# Utility
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
config = "0.14.0"

# Error handling
thiserror = "1.0.56"
anyhow = "1.0.82"

# Logging and tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }

# Middleware / tower layers
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["trace", "catch-panic"] }

[dev-dependencies]
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }
axum-test = "17.3.0"
tokio-test = "0.4.3"
wiremock = "0.6.0"
testcontainers = { version = "0.23.1", features = ["blocking"] }
testcontainers-modules = { version = "0.11.0", features = ["localstack"] }
url = "2.5.0"
futures = "0.3.30"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
serial_test = "3.0.0"
ctrlc = "3.4.0"
libc = "0.2"
ctor = "0.2.0"
rand = "0.8.5"
async-trait = "0.1.74"
reqwest = { version = "0.12.0", features = ["json"] }
base64 = "0.22.0"
aws-sdk-sqs = { version = "1.0", features = ["behavior-version-latest"] }
aws-config = { version = "1.0", features = ["behavior-version-latest"] }
aws-credential-types = "1.0"
infra = { path = "infra", features = ["test-utils"] }
rustycog-events = { path = "../rustycog/rustycog-events", features = ["test-utils"] }
rustycog-testing = { path = "../rustycog/rustycog-testing" }
rustycog-core = { path = "../rustycog/rustycog-core" } 