[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal crates
domain = { path = "../domain" }
configuration = { path = "../configuration" }

# Utility
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
url = "2.5"

# Error handling
thiserror = "1.0.56"
anyhow = "1.0.82"

# Logging
tracing = "0.1.40"

# Async
async-trait = "0.1.77"

[dev-dependencies]
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1.77" 