[package]
name = "configuration"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1.0.197", features = ["derive"] }

# URL parsing
url = "2.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] } 