[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
# Utility
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }

# Error handling
thiserror = "1.0.56"

# Async
async-trait = "0.1.77"

[dev-dependencies]
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] } 