[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal crates
domain = { path = "../domain" }
application = { path = "../application" }

# Web & HTTP
axum = { version = "0.8.4", features = ["macros", "json"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
hyper = "1.3"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "catch-panic"] }
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }
rustls = "0.23"
tokio-rustls = "0.26"

# Utility
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
base64 = "0.22"

# Error handling
thiserror = "1.0.56"
anyhow = "1.0.82"

# Logging and tracing
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.4.13", features = ["util"] }
serde_json = "1.0.116" 