[package]
name = "iam-events"
version = "0.1.0"
edition = "2021"
authors = ["Djoé Denne <djoe.denne@gmail.com>"]
description = "Shared IAM domain events for microservices communication"
license = "MIT OR Apache-2.0"

[dependencies]
# Events abstraction
rustycog-events = { path = "../rustycog/rustycog-events" }
rustycog-core = { path = "../rustycog/rustycog-core" }

# Serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"

# Utility
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }

# Error handling
thiserror = "1.0.56"

[dev-dependencies]
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "test-util"] }
serde_json = "1.0.116" 