[package]
name = "infra"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal crates
domain = { path = "../domain" }
application = { path = "../application" }
configuration = { path = "../configuration" }

# Event handling (replaced with rustycog-events)
rustycog-events = { path = "../../rustycog/rustycog-events" }
rustycog-core = { path = "../../rustycog/rustycog-core" }
rustycog-config = { path = "../../rustycog/rustycog-config" }
rustycog-db = { path = "../../rustycog/rustycog-db" }

# ORM & PostgreSQL
sea-orm = { version = "1.1.11", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1.11" }

# Auth
oauth2 = { version = "4.4.2", features = ["reqwest"] }
openidconnect = { version = "4.0.0", features = ["reqwest"] }
jsonwebtoken = "9.0.2"

# Password hashing
argon2 = "0.5.3"

# Utility
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
config = "0.14.0"
base64 = "0.21.7"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
toml = "0.8.22"

# Error handling
thiserror = "1.0.56"
anyhow = "1.0.82"

# Logging and tracing
tracing = "0.1.40"

# Async
async-trait = "0.1.77"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json"] }

[features]
default = []
test-utils = ["rustycog-events/test-utils"] 