[workspace]
resolver = "2"
members = [
    "rustycog-core",
    "rustycog-server", 
    "rustycog-command",
    "rustycog-db",
    "rustycog-events",
    "rustycog-http",
    "rustycog-config",
    "rustycog-testing"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RustyCog Contributors"]
description = "A comprehensive SDK for building microservices in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/rustycog"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"

# Web framework
axum = { version = "0.8", features = ["macros", "json"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "catch-panic"] }
hyper = "1.3"

# Database
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Events/Kafka
rdkafka = { version = "0.36", features = ["cmake-build", "tokio"] }

# Async utilities
futures = "0.3"

# Testing
testcontainers = { version = "0.23", features = ["blocking"] }
testcontainers-modules = { version = "0.11", features = ["postgres"] }
axum-test = "17.3"
wiremock = "0.6"
reqwest = "0.12"
rand = "0.8"

# AWS Dependencies
aws-config = "1.5"
aws-credential-types = "1.2"  
aws-sdk-sqs = "1.40"

# URL parsing
url = "2.5"

# Macros
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] } 