# This file is now managed by the root workspace
# See ../Cargo.toml for the workspace configuration and dependencies

[package]
name = "rustycog-meta"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A comprehensive SDK for building microservices in Rust"
license.workspace = true

# This is a meta-package that depends on all rustycog crates
[dependencies]
rustycog-core = { path = "rustycog-core" }
rustycog-server = { path = "rustycog-server" }
rustycog-command = { path = "rustycog-command" }
rustycog-db = { path = "rustycog-db" }
rustycog-events = { path = "rustycog-events" }
rustycog-http = { path = "rustycog-http" }
rustycog-config = { path = "rustycog-config" }
rustycog-testing = { path = "rustycog-testing" } 