[package]
name = "setup"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal workspace crates
domain = { path = "../domain" }
application = { path = "../application" }
infra = { path = "../infra" }
http_server = { path = "../http" }
configuration = { path = "../configuration" }

# External dependencies
anyhow = "1.0.82"
chrono = "0.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] } 

# Cryptographic dependencies for secret derivation
sha2 = "0.10"
base64 = "0.22" 