[package]
name = "hive-application"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Application layer for Hive organization management service"
license.workspace = true

[dependencies]
# Domain layer
hive-domain = { path = "../domain" }

# Events
hive-events = { path = "../../hive-events" }

# Command pattern support
rustycog-command = { path = "../../rustycog/rustycog-command" }

rustycog-events = { path = "../../rustycog/rustycog-events" }
rustycog-core = { path = "../../rustycog/rustycog-core" }
rustycog-config = { path = "../../rustycog/rustycog-config" }

# Async traits
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Validation
validator = { workspace = true }

[dev-dependencies]
tokio = { workspace = true } 