[package]
name = "hive-configuration"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Configuration management for Hive organization management service"
license.workspace = true

[dependencies]
# Configuration management
rustycog-config = { path = "../../rustycog/rustycog-config" }
rustycog-logger = { path = "../../rustycog/rustycog-logger" }

# Serialization
serde = { workspace = true }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true } 