[package]
name = "hive-migration"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Database migrations for Hive organization management service"
license.workspace = true

[lib]
name = "hive_migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm-migration = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }